0.7.4.4
=======
-Fixed corrupt and crimson jungle grass not getting converted by blue solution.
-Made some plants to check for actuation before updating

0.7.4.4
=======
-Added vanilla fallback values for every tile in the mod


0.7.4.3
=======
-File & code organization for readability and optimization
-Added a new mod call option for demon altar infection spawning, allowing to manually add new "good" infected stones to it. 
-Added a mod icon for bestiary
-Divine Powder now has white particles instead of light blue

-Another pylon of night crystal resprite
-Touched up on the paint support for infected mosses.
-Fertilizer now affects the saplings from this mod
-Adjusted code to the new tModLoader changes
-Because of how inconsistent the vanilla wall spreading is, it's very difficult and tedious to create a consistient wall spread system without either breaking the game or messing up another mods take on walls, such an Confection Rebaked. So, I removed the current wall spreading system and replaced it with just grass and stone wall spreading.
-Adjusted biome sight wall highlighting dust colors

-Fixed duplicate vertebrae --> leather recipe when used with Calamity mod.
-Fixed Basic Automated Veinmining incompability, causing infected gemstone blocks to drop themselves instead of their gems when used with instant mining on
-Fixed infected plantera textures not working on servers. Plantera will now change it's variant based on what biome the summoning player is in.
-Fixed infected plantera textures randomly deciding to not load
-Fixed incorrect dust values for all tiles
-Fixed divine powder breaking vines and plants
-Fixed some items not having journey mode categories

-Removed the corrupt and crimson jungle biomes.. for now. They will be re-added when these biomes get a worthwhile effect. When will that happen? I do not know, sorry.
-Removed config icons due to an issue that occured if certain configs were disabled